Wrapping fixes

--- a/static/sass/base.css
+++ b/static/sass/base.css
@@ -49,7 +49,8 @@
 
 .breadcrumb {
   background-color: inherit;
-  margin-left: 108px; }
+  margin-left: 108px;
+  margin-bottom: 0px; }
 
 .navbar-brand img {
   width: 100px;
